refactor: modernizar código Java - Collections API, comparaciones, y simplificaciones
- Modernizar Collections.emptyList()/singletonList()  List.of() (7 archivos: 1 main + 6 tests)
- Simplificar comparaciones múltiples con || usando Set.of().contains() (13 ocurrencias en 3 archivos main)
- Eliminar Optional.ofNullable().orElse(null) redundantes en PromotionServiceImpl
- Optimizar comparaciones equalsIgnoreCase con Set.contains() + toLowerCase()
- Agregar imports necesarios de Set y List

Beneficios:
 Código más idiomático Java 9+
 Mejor rendimiento con Set.contains() O(1)
 Mayor legibilidad y mantenibilidad
 Reduce complejidad cognitiva (SonarCloud)