@@ -17,7 +17,7 @@ import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
 @Component
@@ -73,7 +73,7 @@ public class ApiKeyAuthenticationFilter extends OncePerRequestFilter {
                     UsernamePasswordAuthenticationToken authToken = new UsernamePasswordAuthenticationToken(
                             apiKeyId,
                             null,
-                            Collections.singletonList(new SimpleGrantedAuthority("API_CLIENT")));
+                            List.of(new SimpleGrantedAuthority("API_CLIENT")));
                     authToken.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
                     SecurityContextHolder.getContext().setAuthentication(authToken);
                     log.info("✅ Autenticación establecida para apiKeyId: {}", apiKeyId);
